SERVER-58369 Don't take ARHASH optimization path for a direct $sample stage on system.buckets collection